<resources>
    <string name="title_activity_main">Home</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_not_signed_in">Bored and Broke</string>

    <string name="login_name">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_error_string">Invalid Credentials Try Again</string>

    <string name="register">Register</string>
    <string name="register_account">Register a New Account</string>
    <string name="register_full_name">Full Name</string>
    <string name="register_email">Email Address</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_username">Username</string>
    <string name="register_name_error">Please enter a valid name (a-z, A-Z)</string>
    <string name="register_email_error">Please enter a valid email address</string>
    <string name="register_password_error">Password must be 8 characters long</string>
    <string name="register_password_match_error">Make sure passwords match</string>
    <string name="register_email_repeated_error">This email has already been used</string>

    <string name="profile">Profile</string>
    <string name="profile_name">Bruno Steban</string>
    <string name="profile_number_of_activities">50 Activities</string>
    <string name="profile_number_of_photos">248 Photos</string>
    <string name="profile_number_of_reviews">13 Reviews</string>

    <string name="not_signed_in_name">Bored and Broke</string>
    <string name="i_m_bored">I\'m Bored</string>
    <string name="Menu">Menu</string>
    <string name="activities_near_you">Activities Near You</string>
    <string name="activity_list_disclaimer">A scrollable dynamic recycler View will go here with buttons people can click on. Sample Below</string>
    <string name="sample_image_here">Sample Image Here</string>
    <string name="activity_information_here">Activity Information here</string>
    <string name="more_info_here">More Info Here</string>
    <string name="activity_3">Activity 3</string>
    <string name="time_3_00_naddreess_1235_st_bellingham_wa_ncost_3_25_million_nadditionall_some_pictuers_below">Time: 3:00 Addreess: 1235 st. Bellingham WA Cost: $3.25 Million Additionall some Pictuers below</string>
    <string name="back">Back</string>
    <string name="distance_button">Distance</string>
    <string name="cost_button">$$$$</string>
    <string name="time_button">Time</string>
    <string name="app_name">CSCI412-Group5-Bored&amp;Broke-Checkpoint2</string>
    <string name="create_Activity">CreateActivity</string>
    <string name="description_of_activity">Description of Activity</string>
    <string name="name_of_activity">Name of Activity</string>
    <string name="name_of_host">Name of Host</string>
</resources>
