<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_list_tableLayout"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/activity_list_title"
        android:background="#80000000"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activities_near_you" />

    <TextView
        android:id="@+id/activity_list_disclaimer_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_list_disclaimer" />

    <ScrollView
        android:id="@+id/activity_list_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </ScrollView>
    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:onClick="backButton"/>

</TableLayout>