<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:id="@+id/sample_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#80000000"
        android:weightSum="4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/sample_image_text"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/sample_image_here" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_weight="3.5"
            android:background="#aaa" />

        <TextView
            android:id="@+id/sample_activity_information"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/activity_information_here" />

        <Button
            android:id="@+id/activity_list_sample_button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/more_info_here" />
    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>