<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/specific_activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/map"
        android:layout_alignStart="@id/map"
        android:layout_alignLeft="@id/map"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal"
        android:text="@string/activity_3"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/specific_activity_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/specific_activity_title"
        android:layout_alignStart="@id/specific_activity_title"
        android:layout_alignLeft="@id/specific_activity_title"
        android:layout_marginStart="0dp"
        android:gravity="start"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/time_3_00_naddreess_1235_st_bellingham_wa_ncost_3_25_million_nadditionall_some_pictuers_below"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/specific_activity_title"
        android:layout_alignLeft="@id/specific_activity_title"
        android:layout_marginStart="159dp"
        android:layout_marginLeft="159dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:onClick="backButton2"
        android:text="@string/back" />


</RelativeLayout>