<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView_profile_background"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:adjustViewBounds="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/android_background"
            android:onClick="selectImage" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardView_details"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="#BBBBBB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_profile_background">

            <RadioGroup
                android:id="@+id/radio_group_list_selector"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:padding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/radioButton_profile_activities"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:onClick="displayActivities"
                    android:text="@string/profile_number_of_activities" />

                <View
                    android:id="@+id/VerticalLine"
                    android:layout_width="1dip"
                    android:layout_height="match_parent"
                    android:background="#1F1F1F" />

                <Button
                    android:id="@+id/radioButton_profile_photos"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:onClick="displayPhotos"
                    android:text="@string/profile_number_of_photos" />

                <View
                    android:id="@+id/verticalLine"
                    android:layout_width="1dip"
                    android:layout_height="match_parent"
                    android:background="#1F1F1F" />

                <Button
                    android:id="@+id/radioButton_profile_reviews"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:onClick="displayReviews"
                    android:text="@string/profile_number_of_reviews" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_name"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.503" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_profile_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView_profile_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:scaleType="centerCrop"
                tools:srcCompat="@drawable/profile"
                android:onClick="selectImage" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>